<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="60dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delayText"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/delayText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/delayValueText"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:text="@string/delayValueText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/delayValueSlider"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:max="1250" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sourceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openSource"
            android:text="@string/sourceButton" />

        <Button
            android:id="@+id/supportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openSupport"
            android:text="@string/supportButton" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="saveValues"
            android:text="@string/saveButton" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkboxText"
            android:id="@+id/checkBox"
            android:checked="false" />
    </LinearLayout>

</LinearLayout>
